# pixi_snake_singularity

./: .gitignore  Dockerfile  build.bat  pixi.toml
.snakemake/metadata/: aGVsbG8udHh0
apptainer/: setup_env.sh  test.py
apptainer_dep_dual_image/: .gitignore  01_create_pixi_SIF.bat  wflow.def  wflow_container.sh
apptainer_deps/: .gitignore  setup_env.sh
local_run/: Snakefile  pixi.toml
workflow/: Snakefile  build.bat  entrypoint.sh  pixi_env.def  pyproject.toml  setup_wsl.sh
