[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rwsoscalib"
authors = [
  { name = "myname", email = "my@email.net" },
]

version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11.9",
]

requires-python = "3.11.9"
readme="readme.md"


[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
name = "RWSOS_Meuse_Calib2024"
platforms = ["linux-64"]
